# ht-estate

./: .env.example  .gitignore  CLAUDE.md  Makefile
apps/api/: pyproject.toml
apps/api/app/: derive.py  ingest.py  main.py  settings.py  throttle.py
apps/api/scripts/: _bootstrap.py  _seedlib.py  auto_enrich.py  backfill_derived_apartments.py  backfill_geocode.sh  backfill_nonapt.sh  build_corpus.py  coverage_report.py  cron_enrich.sh  cron_ingest.sh  diag_building_add.py  diag_join_recovery.py  enrich_building_ledger.py  enrich_cron.py  enrich_gym_kakao.py  enrich_gym_pet_sample.py  enrich_poi.py  enrich_unit_type.py  fetch_school_data.py  fix_nonapt_geocode_addr.py  gen_bjdong_ref.py  geocode_fingerprint.py  geocode_nonapt.py  ingest_loop.py  ingest_nationwide.py  ingest_seoul.py  lib_lock.sh  load_floorplan_seed.py  load_gym_seed.py  load_pet_seed.py  load_review_seed.py  load_school_locations.py  load_school_zones.py  pipeline_status.py  profile_consistency.py  recall_report.py  refill_kapt_fields.py  review_cron.py  sim_coexist.sh
apps/api/tests/: conftest.py  test_area_buckets.py  test_auto_enrich.py  test_bjdong_lookup.py  test_building_add_apt.py  test_building_ledger.py  test_chat.py  test_complex_repo.py  test_corpus.py  test_coverage_report.py  test_criteria_endpoint.py  test_derive.py  test_embed_client.py  test_enrich_cron.py  test_enrich_extractors.py  test_enrich_fetcher.py  test_enrich_ledger_runner.py  test_enrich_provider.py  test_enrich_runner.py  test_enrich_store.py  test_fetch_school_data.py  test_fix_nonapt_geocode_addr.py  test_floorplan_enrich.py  test_floorplan_poc.py  test_fuzzy.py  test_geo_address.py  test_geo_convert.py  test_geo_coord_db.py  test_geo_match.py  test_geo_repo.py  test_geocode_fingerprint.py  test_geocode_nonapt.py  test_geocoder.py  test_gym_evidence.py  test_gym_extractor.py  test_gym_kakao.py  test_health.py  (+61 more)
(+241 files in other folders)
