[project]
name = "ht-estate-api"
version = "0.1.0"
description = "ht-estate API (FastAPI) — Phase 0 scaffold"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27", # 공공 API 클라이언트 런타임 (MOLIT·K-apt) + FastAPI TestClient
    "pydantic>=2.7", # 타입드 레코드 모델(coercion으로 MOLIT 문자열 정규화)
    "python-dotenv>=1.0", # 루트 .env 자동 로딩(export 불필요)
    "pyproj>=3.7.2",
]

# uv가 관리하는 개발 의존성 (PEP 735). uv sync/run 시 기본 설치.
[dependency-groups]
dev = [
    "pyright>=1.1.380",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
include = ["app", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"
extraPaths = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
